Refactoring of tests to run against S4, S5 and S4 in cloud